--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.7",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
     "@types/react-router-dom": "^5.3.2",
     "graphql": "^16.2.0",
+    "magic-sdk": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
