--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,10 +5,12 @@
     "noImplicitAny": true,
     "sourceMap": true,
     "outDir": "app",
+    "jsx": "preserve"
   },
   "include": [
-    "src/**/*.tsx?",
-    "src/global.d.ts"
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/global.d.ts",
   ],
   "exclude": [
     "node_modules"
