--- a/backend/package.json
+++ b/backend/package.json
@@ -16,16 +16,17 @@
   "license": "ISC",
   "devDependencies": {
     "@graphql-codegen/cli": "2.3.1",
+    "@graphql-codegen/typescript": "2.4.2",
+    "@graphql-codegen/typescript-resolvers": "2.4.3",
     "nodemon": "^2.0.15",
     "prisma": "^3.7.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
-    "@graphql-codegen/typescript": "2.4.2",
-    "@graphql-codegen/typescript-resolvers": "2.4.3"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
     "apollo-server": "^3.6.1",
-    "graphql": "^16.2.0"
+    "graphql": "^16.2.0",
+    "graphql-tools": "^8.2.0"
   }
 }
