--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "prisma migrate deploy && nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "graphql-codegen --config codegen.yml"
   },
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "2.3.1",
     "nodemon": "^2.0.15",
-    "prisma": "^3.7.0",
+    "prisma": "^3.13.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "@graphql-codegen/typescript": "2.4.2",
